# FLVKE

./: .gitignore  README.md  refactoring_notes.md
client/: pubspec.yaml
client/fluke_app/: README.md  pubspec.yaml
client/fluke_app/android/app/: build.gradle.kts
client/fluke_app/ios/Runner/: Info.plist
client/fluke_app/ios/Runner.xcodeproj/: project.pbxproj
client/fluke_app/linux/: CMakeLists.txt
client/fluke_app/linux/runner/: my_application.cc
client/fluke_app/macos/Runner.xcodeproj/: project.pbxproj
client/fluke_app/macos/Runner/Configs/: AppInfo.xcconfig
client/fluke_app/test/: widget_test.dart
client/fluke_app/web/: index.html  manifest.json
client/fluke_app/windows/: CMakeLists.txt
client/fluke_app/windows/runner/: Runner.rc  main.cpp
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: constants.dart  main.dart  theme.dart
client/lib/models/: models.dart
client/lib/screens/: login_page.dart  timeline_page.dart
client/lib/services/: websocket_service.dart
client/lib/state/: auth_state.dart  balance_state.dart  position_state.dart  theme_state.dart  timeline_state.dart
client/lib/utils/: bonding_curve.dart
client/lib/widgets/: post_widget.dart
server/: Cargo.toml
server/src/: auth.rs  bonding_curve.rs  calculations.rs  constants.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  protocol.rs  state.rs  websocket.rs
server/tests/: api_integration_test.rs
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 0000_init.sql  0001_add_user_profiles.sql
(+3 files in other folders)
