[package]
name = "fluke-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fluke_server_bin"
path = "src/main.rs"

[lib]
name = "fluke_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
postgrest = "^1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
rust_decimal = { version = "1.35", features = ["serde-with-float"] }
rust_decimal_macros = "1.35"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "rust_decimal", "json" ] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15"
serde_json = "1.0"
