[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Full features for simplicity
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
jsonwebtoken = "9"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] } # Serde feature for JWT claims
uuid = { version = "1", features = ["v4", "serde"] } # v4 for random UUIDs, serde feature
dashmap = "5.5"
tokio-stream = "0.1" 